--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "watch": "tsc -watch -p ./",
     "pretest": "yarn run compile && yarn run lint",
     "test": "node ./out/test/runTest.js",
+    "test:unit": "yarn jest",
+    "test:watch": "yarn jest --watch",
     "package": "yarn build:release && vsce package",
     "test-compile": "tsc -p ./",
     "build:release": "yarn esbuild-base --minify",
@@ -65,6 +67,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
+    "@types/jest": "^27.0.3",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.0.0",
     "@types/vscode": "^1.61.0",
@@ -73,7 +76,9 @@
     "esbuild": "^0.13.9",
     "eslint": "^8.1.0",
     "glob": "^7.2.0",
+    "jest": "^27.3.1",
     "mocha": "^9.1.3",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
     "vscode-test": "^1.6.1"
   }
