Extend `eslint-config-seek`, fix lints

--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "esbuild-watch": "yarn esbuild-base --sourcemap --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/plugin-syntax-jsx": "^7.16.7",
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.0.3",
     "@types/mocha": "^9.0.0",
@@ -79,6 +81,16 @@
     "@typescript-eslint/parser": "^5.2.0",
     "esbuild": "^0.13.9",
     "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-seek": "^7.0.9",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "glob": "^7.2.0",
     "jest": "^27.3.1",
     "mocha": "^9.1.3",
