--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,16 @@
     "ecmaVersion": 6,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/naming-convention": "warn",
-    "@typescript-eslint/semi": "warn",
-    "curly": "warn",
-    "eqeqeq": "warn",
-    "no-throw-literal": "warn",
-    "semi": "off"
+    "jest/expect-expect": [
+      "warn",
+      {
+        "assertFunctionNames": ["expect", "runExtractionTest"],
+        "additionalTestBlockFunctions": []
+      }
+    ]
   },
+  "plugins": ["@typescript-eslint"],
+  "extends": "seek",
   "ignorePatterns": ["out", "dist", "**/*.d.ts"]
 }
