--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
   },
   "dependencies": {
     "@babel/core": "7.17.2",
-    "@babel/plugin-syntax-jsx": "7.16.7"
+    "@babel/plugin-syntax-jsx": "7.16.7",
+    "lru-cache": "^7.3.1"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
