Default `formatAfterReplace` to `false` instead of `true`
- Defaulting to this to `true` can cause annoying popups to appear
for users who haven't set up a formatter

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         },
         "vocabHelper.formatAfterReplace": {
           "type": "boolean",
-          "default": true,
+          "default": false,
           "description": "Format the current document after replacing the highlighted translation string"
         }
       }
