--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vocabhelper",
   "displayName": "Vocab Helper",
   "description": "Helper extension for the Vocab i18n framework",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "publisher": "askoufis",
   "repository": {
     "type": "git",
@@ -46,7 +46,7 @@
         },
         "vocabHelper.formatAfterReplace": {
           "type": "boolean",
-          "default": true,
+          "default": false,
           "description": "Format the current document after replacing the highlighted translation string"
         }
       }
