Publish bundled output
- `vsce package` was targetting the raw `tsc` output which is neither
  bundled nor minified. Now the bundled and minified esbuild output is
  placed into the `dist` folder and is the only file used for packaging
  the extension.
- This is what was causing the publishing issues a few versions ago.
  I hadn't run `tsc` in a while, so the actual files being used for
  packaging were stale.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,8 +1,8 @@
-.vscode/**
+.vscode
 .vscode-test/**
-out/test/**
-
-src/**
+out
+node_modules
+src
 .gitignore
 .yarnrc
 .nvmrc
@@ -11,7 +11,6 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
-test/**
 jest.config.js
 .github/
 yarn.lock
