--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
     },
     {
       "type": "npm",
-      "script": "compile",
+      "script": "build:release",
       "group": {
         "kind": "build",
         "isDefault": true
