--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "test:watch": "yarn jest --watch",
     "package": "yarn build:release && vsce package",
     "test-compile": "tsc",
-    "build:release": "yarn esbuild-base --minify",
+    "build:release": "yarn compile && yarn esbuild-base --minify",
     "esbuild": "yarn esbuild-base --sourcemap",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
     "esbuild-watch": "yarn esbuild-base --sourcemap --watch"
@@ -87,6 +87,7 @@
     "@types/vscode": "1.61.0",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
+    "@vscode/test-electron": "^2.1.3",
     "esbuild": "^0.14.21",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
@@ -103,7 +104,6 @@
     "jest": "^27.5.1",
     "mocha": "^9.2.0",
     "ts-jest": "^27.1.3",
-    "typescript": "4.4.4",
-    "vscode-test": "^1.6.1"
+    "typescript": "4.4.4"
   }
 }
