--- a/package.json
+++ b/package.json
@@ -91,11 +91,9 @@
     "esbuild": "^0.14.21",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-seek": "^7.0.9",
+    "eslint-config-seek": "8.0.0",
     "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.0",
     "eslint-plugin-react": "^7.28.0",
