--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vocabhelper",
   "displayName": "Vocab Helper",
   "description": "Helper extension for the Vocab i18n framework",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "publisher": "askoufis",
   "repository": {
     "type": "git",
@@ -77,6 +77,7 @@
   "dependencies": {
     "@babel/core": "7.17.2",
     "@babel/plugin-syntax-jsx": "7.16.7",
+    "@babel/plugin-syntax-typescript": "^7.16.7",
     "lru-cache": "^7.3.1"
   },
   "devDependencies": {
