--- a/package.json
+++ b/package.json
@@ -77,10 +77,12 @@
   "dependencies": {
     "@babel/core": "7.17.2",
     "@babel/plugin-syntax-jsx": "7.16.7",
-    "@babel/plugin-syntax-typescript": "^7.16.7",
+    "@babel/plugin-syntax-typescript": "7.16.7",
     "lru-cache": "^7.3.1"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.165",
+    "@swc/jest": "^0.2.20",
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.0",
     "@types/mocha": "^9.1.0",
@@ -102,7 +104,6 @@
     "glob": "^7.2.0",
     "jest": "^27.5.1",
     "mocha": "^9.2.0",
-    "ts-jest": "^27.1.3",
     "typescript": "4.4.4"
   }
 }
