--- a/package.json
+++ b/package.json
@@ -105,5 +105,9 @@
     "jest": "^27.5.1",
     "mocha": "^9.2.0",
     "typescript": "4.4.4"
+  },
+  "volta": {
+    "node": "16.14.2",
+    "yarn": "1.22.18"
   }
 }
