--- a/package.json
+++ b/package.json
@@ -63,24 +63,24 @@
     "compile": "tsc",
     "lint": "eslint src --ext ts",
     "watch": "tsc --watch",
-    "pretest": "yarn compile && yarn lint",
+    "pretest": "pnpm compile && pnpm lint",
     "test": "node ./out/test/runTest.js",
-    "test:unit": "yarn jest",
-    "test:watch": "yarn jest --watch",
-    "package": "yarn build:release && vsce package",
+    "test:unit": "pnpm jest",
+    "test:watch": "pnpm jest --watch",
+    "package": "pnpm build:release && vsce package",
     "test-compile": "tsc",
-    "build:release": "yarn compile && yarn esbuild-base --minify",
-    "esbuild": "yarn esbuild-base --sourcemap",
+    "build:release": "pnpm compile && pnpm esbuild-base --minify",
+    "esbuild": "pnpm esbuild-base --sourcemap",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
-    "esbuild-watch": "yarn esbuild-base --sourcemap --watch"
+    "esbuild-watch": "pnpm esbuild-base --sourcemap --watch"
   },
   "dependencies": {
     "@babel/core": "7.17.2",
     "@babel/plugin-syntax-jsx": "7.16.7",
-    "@babel/plugin-syntax-typescript": "7.16.7",
-    "lru-cache": "^7.3.1"
+    "@babel/plugin-syntax-typescript": "7.16.7"
   },
   "devDependencies": {
+    "@jest/globals": "^27.5.1",
     "@swc/core": "^1.2.165",
     "@swc/jest": "^0.2.20",
     "@types/glob": "^7.2.0",
@@ -94,7 +94,7 @@
     "esbuild": "^0.14.21",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-config-seek": "8.0.0",
+    "eslint-config-seek": "9.0.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.25.4",
@@ -107,7 +107,6 @@
     "typescript": "4.4.4"
   },
   "volta": {
-    "node": "16.14.2",
-    "yarn": "1.22.18"
+    "node": "16.14.2"
   }
 }
