--- a/package.json
+++ b/package.json
@@ -93,20 +93,20 @@
     "@vscode/test-electron": "^2.1.3",
     "esbuild": "^0.14.21",
     "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
     "eslint-config-seek": "9.0.0",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.1.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
     "glob": "^7.2.0",
     "jest": "^27.5.1",
     "mocha": "^9.2.0",
+    "ts-dedent": "^2.2.0",
     "typescript": "4.4.4"
   },
   "volta": {
     "node": "16.14.2"
+  },
+  "__metadata": {
+    "id": "539a1d6c-4c4f-49da-9f80-ff488e481c1d",
+    "publisherDisplayName": "Adam Skoufis",
+    "publisherId": "3b5cce05-a272-43d9-b234-588d1667e017",
+    "isPreReleaseVersion": false
   }
 }
