--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Helper extension for the Vocab i18n framework",
   "version": "0.7.0",
   "publisher": "askoufis",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/askoufis/vocab-vscode-extension"
@@ -77,12 +78,14 @@
   "dependencies": {
     "@babel/core": "7.17.2",
     "@babel/plugin-syntax-jsx": "7.16.7",
-    "@babel/plugin-syntax-typescript": "7.16.7"
+    "@babel/plugin-syntax-typescript": "7.16.7",
+    "@babel/types": "7.18.4"
   },
   "devDependencies": {
     "@jest/globals": "^27.5.1",
     "@swc/core": "^1.2.165",
     "@swc/jest": "^0.2.20",
+    "@types/babel__core": "7.1.19",
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.0",
     "@types/mocha": "^9.1.0",
@@ -96,6 +99,7 @@
     "eslint-config-seek": "9.0.0",
     "glob": "^7.2.0",
     "jest": "^27.5.1",
+    "jest-watch-typeahead": "^1.1.0",
     "mocha": "^9.2.0",
     "ts-dedent": "^2.2.0",
     "typescript": "4.4.4"
