--- a/package.json
+++ b/package.json
@@ -82,8 +82,6 @@
   },
   "devDependencies": {
     "@jest/globals": "^27.5.1",
-    "@swc/core": "^1.2.165",
-    "@swc/jest": "^0.2.20",
     "@types/babel__core": "7.1.19",
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.0",
@@ -94,6 +92,7 @@
     "@typescript-eslint/parser": "^5.2.0",
     "@vscode/test-electron": "^2.1.3",
     "esbuild": "^0.14.21",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.9.0",
     "eslint-config-seek": "9.0.0",
     "glob": "^7.2.0",
