--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "test": "node ./out/test/runTest.js",
     "test:unit": "pnpm jest",
     "test:watch": "pnpm jest --watch",
-    "package": "pnpm build:release && vsce package --no-dependencies",
+    "package": "pnpm build:release && pnpm vsce package --no-dependencies",
     "build:release": "pnpm tsc && pnpm esbuild-base --minify",
     "esbuild": "pnpm esbuild-base --sourcemap",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
@@ -100,7 +100,8 @@
     "jest-watch-typeahead": "^1.1.0",
     "mocha": "^9.2.0",
     "ts-dedent": "^2.2.0",
-    "typescript": "4.7.2"
+    "typescript": "4.7.2",
+    "vsce": "^2.9.1"
   },
   "volta": {
     "node": "16.14.2"
