--- a/package.json
+++ b/package.json
@@ -64,8 +64,7 @@
     "tsc": "tsc",
     "lint": "eslint src --ext ts",
     "watch": "tsc --watch",
-    "pretest": "pnpm tsc && pnpm lint",
-    "test": "node ./out/test/runTest.js",
+    "test": "pnpm tsc && node ./out/test/runTest.js",
     "test:unit": "pnpm jest",
     "test:watch": "pnpm jest --watch",
     "package": "pnpm build:release && pnpm vsce package --no-dependencies",
@@ -87,25 +86,25 @@
     "@types/glob": "^7.2.0",
     "@types/jest": "^27.4.0",
     "@types/mocha": "^9.1.0",
-    "@types/node": "^14.0.0",
+    "@types/node": "^18.0.0",
     "@types/vscode": "1.61.0",
-    "@typescript-eslint/eslint-plugin": "^5.2.0",
-    "@typescript-eslint/parser": "^5.2.0",
-    "@vscode/test-electron": "^2.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "@vscode/test-electron": "^2.3.0",
+    "@vscode/vsce": "^2.18.0",
     "esbuild": "^0.14.21",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.9.0",
-    "eslint-config-seek": "9.0.0",
+    "eslint-config-seek": "^10.2.0",
     "glob": "^7.2.0",
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.1.0",
     "mocha": "^9.2.0",
     "ts-dedent": "^2.2.0",
-    "typescript": "4.7.2",
-    "vsce": "^2.9.1"
+    "typescript": "^4.9.5"
   },
   "volta": {
-    "node": "16.14.2"
+    "node": "18.14.2"
   },
   "__metadata": {
     "id": "539a1d6c-4c4f-49da-9f80-ff488e481c1d",
