--- a/package.json
+++ b/package.json
@@ -64,13 +64,13 @@
     "tsc": "tsc",
     "lint": "eslint src --ext ts",
     "watch": "tsc --watch",
-    "test": "pnpm tsc && node ./out/test/runTest.js",
+    "test": "pnpm build && pnpm tsc && node ./out/test/runTest.js",
     "test:unit": "pnpm jest",
     "test:watch": "pnpm jest --watch",
     "package": "pnpm build:release && pnpm vsce package --no-dependencies",
     "publish": "pnpm vsce publish --no-dependencies",
     "build:release": "pnpm tsc && pnpm esbuild-base --minify",
-    "esbuild": "pnpm esbuild-base --sourcemap",
+    "build": "pnpm esbuild-base --sourcemap",
     "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
     "esbuild-watch": "pnpm esbuild-base --sourcemap --watch"
   },
