--- a/package.json
+++ b/package.json
@@ -103,8 +103,10 @@
     "ts-dedent": "^2.2.0",
     "typescript": "^4.9.5"
   },
+  "packageManager": "pnpm@8.14.2",
   "volta": {
-    "node": "18.14.2"
+    "node": "18.14.2",
+    "pnpm": "8.15.1"
   },
   "__metadata": {
     "id": "539a1d6c-4c4f-49da-9f80-ff488e481c1d",
