Update some deps, update tsconfig, add dep on `@babel/preset-typescript` for some weird reason
- For whatever reason, babel core doesn't think I have TSConfig support,
  then tries to require `@babel/preset-typescript`'s package.json, which
  fails because I don't have it installed.

--- a/package.json
+++ b/package.json
@@ -75,33 +75,34 @@
     "esbuild-watch": "pnpm esbuild-base --sourcemap --watch"
   },
   "dependencies": {
-    "@babel/core": "7.17.2",
-    "@babel/plugin-syntax-jsx": "7.16.7",
-    "@babel/plugin-syntax-typescript": "7.16.7",
-    "@babel/types": "7.18.4"
+    "@babel/core": "7.23.9",
+    "@babel/plugin-syntax-jsx": "7.23.3",
+    "@babel/plugin-syntax-typescript": "7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@babel/types": "7.23.9"
   },
   "devDependencies": {
     "@jest/globals": "^27.5.1",
-    "@types/babel__core": "7.1.19",
+    "@types/babel__core": "7.20.5",
     "@types/glob": "^7.2.0",
-    "@types/jest": "^27.4.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^18.0.0",
+    "@types/jest": "^27.5.2",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.19.10",
     "@types/vscode": "1.61.0",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "@vscode/test-electron": "^2.3.0",
-    "@vscode/vsce": "^2.18.0",
-    "esbuild": "^0.14.21",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vscode/test-electron": "^2.3.9",
+    "@vscode/vsce": "^2.23.0",
+    "esbuild": "^0.14.54",
     "esbuild-jest": "^0.5.0",
-    "eslint": "^8.9.0",
-    "eslint-config-seek": "^10.2.0",
-    "glob": "^7.2.0",
+    "eslint": "^8.56.0",
+    "eslint-config-seek": "^10.3.0",
+    "glob": "^7.2.3",
     "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.1.0",
-    "mocha": "^9.2.0",
+    "mocha": "^9.2.2",
     "ts-dedent": "^2.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "~5.3.3"
   },
   "packageManager": "pnpm@8.14.2",
   "volta": {
