--- a/package.json
+++ b/package.json
@@ -82,25 +82,24 @@
     "@babel/types": "7.23.9"
   },
   "devDependencies": {
-    "@jest/globals": "^27.5.1",
+    "@jest/globals": "^29.7.0",
     "@types/babel__core": "7.20.5",
-    "@types/glob": "^7.2.0",
-    "@types/jest": "^27.5.2",
-    "@types/mocha": "^9.1.1",
+    "@types/jest": "^29.5.11",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^18.19.10",
     "@types/vscode": "1.61.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "@vscode/test-electron": "^2.3.9",
     "@vscode/vsce": "^2.23.0",
-    "esbuild": "^0.14.54",
+    "esbuild": "^0.20.0",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.56.0",
     "eslint-config-seek": "^10.3.0",
-    "glob": "^7.2.3",
-    "jest": "^27.5.1",
-    "jest-watch-typeahead": "^1.1.0",
-    "mocha": "^9.2.2",
+    "fast-glob": "^3.3.2",
+    "jest": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "mocha": "^10.2.0",
     "ts-dedent": "^2.2.0",
     "typescript": "~5.3.3"
   },
