--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "scripts": {
     "tsc": "tsc",
-    "lint": "eslint src --ext ts",
+    "lint": "eslint src --ext ts --cache",
     "watch": "tsc --watch",
     "test": "pnpm build && pnpm tsc && node ./out/test/runTest.js",
     "test:unit": "pnpm jest",
@@ -95,7 +95,7 @@
     "esbuild": "^0.20.0",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.56.0",
-    "eslint-config-seek": "^10.3.0",
+    "eslint-config-seek": "^12.1.1",
     "fast-glob": "^3.3.2",
     "jest": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
