--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "@typescript-eslint/parser": "^6.20.0",
     "@vscode/test-electron": "^2.3.9",
     "@vscode/vsce": "^2.23.0",
+    "dedent": "^1.5.3",
     "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "eslint-config-seek": "^12.1.1",
@@ -101,7 +102,6 @@
     "jest": "^29.7.0",
     "jest-watch-typeahead": "^2.2.2",
     "mocha": "^10.2.0",
-    "ts-dedent": "^2.2.0",
     "typescript": "~5.3.3"
   },
   "packageManager": "pnpm@9.4.0",
